--- a/.github/workflows/iac_apply.yml
+++ b/.github/workflows/iac_apply.yml
@@ -24,6 +24,6 @@ jobs:
     - name: Apply Terraform Changes
       run: |
         terraform -chdir=dev plan -out=tfplan
-        terraform apply -auto-approve tfplan
+        terraform -chdir=dev apply -auto-approve tfplan
       env:
         TF_VAR_1: ${{ secrets.TF_VAR_1 }}  # Set environment variables for your secrets
